@@ -2203,6 +2203,7 @@ Duane Beck <duane dot beck at lmco dot com>
 Kanghee Yoon <propar at gmail dot com>
 Xu Liang <lxu4net at gmail dot com>
 Leo Lei <nsinit at 163 dot com>
+Jules d'Entremont <Jules dot dEntremont at SolaceSystems dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
